# qsep_feedback_subject_classfier

./: .gitignore  CLAUDE.md  README.md  classifier_config.py  output_merged.xlsx  pyproject.toml  temporary_cleaned.xlsx
docs/input/: Category_Labeler.xlsx  June-QSEP Cases FCR_Collapsed.xlsx  Katie July 2025 no prepoccesing_Collapsed.xlsx  Katie July 2025.xlsm  Katie July 2025_Collapsed.xlsx  Katie_July_simple_titles.xlsm  Katie_July_simple_titles_all_sheets.xlsm
docs/input/Ventech PDF-June/: June-QSEP Cases FCR_Collapsed.xlsx  June-QSEP Cases Opened March 2020 through , Resolved_Collapsed.xlsx  June-QSEP Cases Opened Previous Month_Collapsed.xlsx  June-QSEP Cases Opened and Resolved Previous Month_Collapsed.xlsx
docs/output/: Katie July 2025.xlsx  Katie_July_Collapsed.xlsx  Katie_July_Collapsed_all_sheets.xlsx  Katie_July_Collapsed_all_sheets_NO_PREPROCESSING_TEST.xlsx  Katie_July_simple_titles.xlsx
feedback_classifier_assets/: restaurant_feedback_samples.csv
feedback_classifier_assets/cache/restaurant_encoded_dataset/test/: data-00000-of-00001.arrow  state.json
feedback_classifier_assets/cache/restaurant_encoded_dataset/train/: data-00000-of-00001.arrow  state.json
feedback_classifier_assets/restaurant_classifier_model/: config.json  model.safetensors
qsep_feedback_subject_classifier/: categorize_label.py  main.py  pdf_reader.py  row_collapser.py  xlsm_to_xlsx_converter.py
qsep_feedback_subject_classifier/utils/: utils.py
scripts/: categorize.bat  run_unit_tests.bat  setup.bat
tests/unit/: ritual_unit_test.py  test_row_collapser.py
